Adding changes packages json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wilds-rincon-personal-web",
+  "name": "tim-baker-personal-web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
